samples/_failures_safe/1761564877_16cd28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce249d11.c: In function ‘main’:
./samples/SAFE/__tmp_ce249d11.c:153:28: error: missing terminating " character
  153 |                     printf("Matrix A + B:\
      |                            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ce249d11.c:153:21: error: expected expression at end of input
  153 |                     printf("Matrix A + B:\
      |                     ^~~~~~
./samples/SAFE/__tmp_ce249d11.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce249d11.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce249d11.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce249d11.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce249d11.c:153:21: error: expected declaration or statement at end of input
